--- a/.htaccess
+++ b/.htaccess
@@ -39,6 +39,7 @@ RewriteEngine On
 RewriteBase /
 
 RewriteRule ^c([0-9]+)/.*?-([0-9]+)/index([0-9]+).html$ topic.php?cid=$1&tid=$2&page=$3 [L]
+RewriteRule ^(.*?)\.html$ $1.php [L]
 
 RewriteCond %{QUERY_STRING} mosConfig_[a-zA-Z_]{1,21}(=|\%3D) [OR]
 RewriteCond %{QUERY_STRING} base64_encode.*\(.*\) [OR]
